# vtuber

./: .gitignore  CMakeLists.txt
src/: globals.hpp  main.cpp  project_includes.hpp  shaders.hpp  state.cpp  state.hpp
src/lua_bindings/: object_binding.cpp  object_binding.hpp  script.cpp  script.hpp  wrap_struct.h
src/primitives/: avatar.cpp  avatar.hpp  debug_line.hpp  entity.cpp  entity.hpp  object.cpp  object.hpp  shader.hpp  texture.cpp  texture.hpp
src/scripts/: test.lua
src/user_input/: console.cpp  console.hpp  mic.hpp  mic_input.hpp
